@@ -27,9 +27,9 @@ import org.junit.Assert;
 import org.junit.Test;
 
 /**
- * A collection of tests that check the generated output of the api.mustache template.<br>
- * Since class generation is realized in Gradle, the tests use existing classes to avoid additional
- * gradle tasks for testing.
+ * A test ensuring that specific generated SolrRequest classes deserialize responses into the correct type.
+ *
+ * See SOLR-17326 for more context.  Consider removing once SOLR-17329 has been completed.
  */
 public class ApiMustacheTemplateTests {
 
