@@ -150,6 +150,8 @@ Bug Fixes
 
 * SOLR-17317: v2 APIs no longer return the incorrect content-type when 'wt=json' specified (Jason Gerlowski)
 
+* SOLR-17326: Generated v2 'SolrRequest' implementations now all serialize to the correct response type (Christos Malliaridis via Jason Gerlowski)
+
 Dependency Upgrades
 ---------------------
 (No changes)
